# aether-firmware

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  prj.conf  sample.yaml  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: aether_board.overlay  lora_e5_dev_board.overlay
app/src/: cayenne.h  delays.h  lora.c  lora.h  main.c  pm.c  pm.h  pm_sensor_thread.c  sensor.c  sensor.h  sensor_thread.c  threads.h  usb.c
app/src/io/: lora.c  lora.h  usb.c
app/src/sensor/: bme688.c  bme688.h  cayenne.c  cayenne.h  sps30.c  sps30.h  zmod4510.c  zmod4510.h
boards/: lora_e5_dev_board.overlay
boards/arm/aether/: Kconfig.board  Kconfig.defconfig  aether.dts  aether.yaml
boards/arm/aether/doc/: aether.rst
drivers/: CMakeLists.txt
drivers/sensor/: CMakeLists.txt  Kconfig  sensor_shell.c
drivers/sensor/sps30/: CMakeLists.txt  Kconfig  sps30.c  sps30.h
drivers/sensor/zmod4510/: CMakeLists.txt  Kconfig  zmod4510.c  zmod4510.h
dts/bindings/sensor/: renesas,zmod4510.yaml  sensirion,sps30.yaml
include/: cayenne.h
include/drivers/sensor/: sps30.h  zmod4510.h
lib/: CMakeLists.txt
lib/cayenne/: CMakeLists.txt  cayenne.c
sandbox/: prj.conf
sandbox/msgq/src/: main.c
sandbox/pm/: CMakeLists.txt  prj.conf
sandbox/pm/boards/: lora_e5_dev_board.overlay
sandbox/pm/src/: main.c
sandbox/power-domain/: prj.conf
sandbox/power-domain/boards/: lora_e5_dev_board.overlay
sandbox/power-domain/src/: main.c
sandbox/src/: main.c
sandbox/zmod4510/: CMakeLists.txt  prj.conf
sandbox/zmod4510/boards/: lora_e5_dev_board.overlay
sandbox/zmod4510/src/: main.c
src/: main.c
tests/lib/cayenne/: CMakeLists.txt  testcase.yaml
tests/lib/cayenne/src/: main.c
